--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </script>
     <title>GitHub 文件加速</title>
 </head>
-<body class="flex" style="background-size: cover;background-repeat: no-repeat;background-position: center center;backface-visibility: hidden;background-image: url("../bg.jpg");">
+<body class="flex" style="background-size: cover;background-repeat: no-repeat;background-position: center center;backface-visibility: hidden;background-image: url("https://gp.nicepub.top/bg.jpg");">
 <a style="position: absolute;top: 0;right: 0;" href="https://github.com/hunshcn/gh-proxy"><img width="149" height="149" referrerPolicy="no-referrer"
                                                                                                src="https://inews.gtimg.com/newsapp_ls/0/12025455907/0"
                                                                                                alt="Fork me on GitHub"
