--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         }
     }
 
-    .flex {
+<!--    .flex {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
-
+-->
     .block {
         display: block;
         position: relative;
@@ -117,7 +117,7 @@
     </script>
     <title>GitHub 文件加速</title>
 </head>
-<body class="flex" style="background-size: cover;background-repeat: no-repeat;background-position: center center;background-image: url("https://gp.nicepub.top/bg.jpg");">
+<body class="flex" style="background: #e6e3e1 url(../bg.jpg) no-repeat bottom right;">
 <a style="position: absolute;top: 0;right: 0;" href="https://github.com/hunshcn/gh-proxy"><img width="149" height="149" referrerPolicy="no-referrer"
                                                                                                src="https://inews.gtimg.com/newsapp_ls/0/12025455907/0"
                                                                                                alt="Fork me on GitHub"
