--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     .btn {
         line-height: 38px;
-        background-color: #00bfb3;
+        background-color: #e04d4d;
         color: #fff;
         white-space: nowrap;
         text-align: center;
@@ -84,7 +84,7 @@
     }
 
     .tips, .example {
-        color: #fff;
+        color: #00bfb3;
         position: relative;
         align-self: flex-start;
         margin-left: 7.5em;
@@ -94,7 +94,7 @@
         position: absolute;
         left: -3em;
         content: 'PS：';
-        color: #fff
+        color: #00bfb3
     }
 
     .example > p:first-child::before {
@@ -130,7 +130,7 @@
         <div class="bar"></div>
     </label>
     <input class="block btn" type="submit" value="下载">
-    <div class="tips"><p>GitHub文件链接带不带协议头都可以，支持release、archive以及文件，右键复制出来的链接都是符合标准的，更多用法、clone加速请参考<a style="color: #3294ea;" href="https://hunsh.net/archives/23/">这篇文章</a>。</p>
+    <div class="tips"><p>GitHub文件链接带不带协议头都可以，支持release、archive以及文件，右键复制出来的链接都是符合标准的，更多用法、clone加速请参考<a style="color: #00bfb3;" href="https://hunsh.net/archives/23/">这篇文章</a>。</p>
         <p>release、archive使用cf加速，文件会跳转至JsDelivr</p>
         <p>注意，不支持项目文件夹</p></div>
     <div class="example">
@@ -140,7 +140,7 @@
         <p>分支文件：https://github.com/hunshcn/project/blob/master/filename</p>
     </div>
 </form>
-<p style="position: sticky;top: calc(100% - 2.5em);color: #fff;">项目基于Cloudflare Workers，开源于GitHub <a style="color: #3294ea"
+<p style="position: sticky;top: calc(100% - 2.5em);color: #fff;">项目基于Cloudflare Workers，开源于GitHub <a style="color: #00bfb3;"
                                                                                          href="https://github.com/hunshcn/gh-proxy">gh-proxy</a>
 </p>
 </body>
