--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     .btn {
         line-height: 38px;
-        background-color: #e04d4d;
+        background-color: #00bfb3;
         color: #fff;
         white-space: nowrap;
         text-align: center;
@@ -84,7 +84,13 @@
     }
 
     .tips, .example {
-        color: #00bfb3;
+        color: #e04d4d;
+        position: relative;
+        align-self: flex-start;
+        margin-left: 7.5em;
+    }
+	.example {
+        color: #fff;
         position: relative;
         align-self: flex-start;
         margin-left: 7.5em;
@@ -94,14 +100,14 @@
         position: absolute;
         left: -3em;
         content: 'PS：';
-        color: #00bfb3
+        color: #e04d4d
     }
 
     .example > p:first-child::before {
         position: absolute;
         left: -7.5em;
         content: '合法输入示例：';
-        color: #00bfb3
+        color: #fff
     }
 </style>
 <head>
