--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     .btn {
         line-height: 38px;
-        background-color: #00bfb3;
+        background-color: #e04d4d;
         color: #fff;
         white-space: nowrap;
         text-align: center;
@@ -84,7 +84,7 @@
     }
 
     .tips, .example {
-        color: #e04d4d;
+        color: #00bfb3;
         position: relative;
         align-self: flex-start;
         margin-left: 7.5em;
@@ -100,7 +100,7 @@
         position: absolute;
         left: -3em;
         content: 'PS：';
-        color: #e04d4d
+        color: #00bfb3
     }
 
     .example > p:first-child::before {
@@ -136,7 +136,7 @@
         <div class="bar"></div>
     </label>
     <input class="block btn" type="submit" value="下载">
-    <div class="tips"><p>GitHub文件链接带不带协议头都可以，支持release、archive以及文件，右键复制出来的链接都是符合标准的，更多用法、clone加速请参考<a style="color: #fff;" href="https://hunsh.net/archives/23/">这篇文章</a>。</p>
+    <div class="tips"><p>GitHub文件链接带不带协议头都可以，支持release、archive以及文件，右键复制出来的链接都是符合标准的，更多用法、clone加速请参考<a style="color: #e04d4d;" href="https://hunsh.net/archives/23/">这篇文章</a>。</p>
         <p>release、archive使用cf加速，文件会跳转至JsDelivr</p>
         <p>注意，不支持项目文件夹</p></div>
     <div class="example">
