--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </script>
     <title>GitHub 文件加速</title>
 </head>
-<body class="flex" style="background: #e6e3e1 url(../bg.jpg) no-repeat center center;">
+<body class="flex" style="background: #e6e3e1 url(../gh/bg.jpg) no-repeat center center;">
 <a style="position: absolute;top: 0;right: 0;" href="https://github.com/hunshcn/gh-proxy"><img width="149" height="149" referrerPolicy="no-referrer"
                                                                                                src="https://inews.gtimg.com/newsapp_ls/0/12025455907/0"
                                                                                                alt="Fork me on GitHub"
