--- a/index.html
+++ b/index.html
@@ -111,7 +111,6 @@
     }
 </style>
 <head>
-	<link rel="icon" href="../gh/favicon.ico">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -124,12 +123,12 @@
     </script>
     <title>GitHub 文件加速</title>
 </head>
-<body class="flex" style="background: #e6e3e1 url(../gh/bg.jpg) no-repeat center center;">
+<body class="flex" style="background: #e6e3e1 url(../bg.jpg) no-repeat center center;">
 <a style="position: absolute;top: 0;right: 0;" href="https://github.com/hunshcn/gh-proxy"><img width="149" height="149" referrerPolicy="no-referrer"
                                                                                                src="https://inews.gtimg.com/newsapp_ls/0/12025455907/0"
                                                                                                alt="Fork me on GitHub"
                                                                                                data-recalc-dims="1"></a>
-<h1 style="margin-bottom: 50px"><img src="../gh/logo.png" style="width: 1.5em;margin-right: .2em;vertical-align: bottom;color:#fff;">GitHub 文件加速</h1>
+<h1 style="margin-bottom: 50px"><img src="../logo.png" style="width: 1.5em;margin-right: .2em;vertical-align: bottom;color:#fff;">GitHub 文件加速</h1>
 <form action="./" method="get" style="padding-bottom: 40px" target="_blank" class="flex" onsubmit="toSubmit(event)">
     <label class="block" style="width: fit-content">
         <input class="block url" name="q" type="text" placeholder="键入Github文件链接"
